--- a/about.html
+++ b/about.html
@@ -67,10 +67,13 @@
               <div class="offcanvas-social">
                 <ul class="text-center">
                   <li>
+                    <a href="%24.html"><i class="fab fa-whatsapp"></i></a>
+                  </li>
+                  <li>
                     <a href="%24.html"><i class="fab fa-facebook-f"></i></a>
                   </li>
                   <li>
-                    <a href="%24.html"><i class="fab fa-whatsapp"></i></a>
+                    <a href="%24.html"><i class="fab fa-instagram"></i></a>
                   </li>
                   <li>
                     <a href="%24.html"><i class="far fa-envelope"></i></a>
@@ -86,7 +89,34 @@
                     <a href="./about.html">About</a>
                   </li>
                   <li class="menu-item-has-children active">
-                    <a href="./index.html#services">Services</a>
+                    <a href="#">Pages</a>
+                    <ul class="sub-menu">
+                      <li><a href="./page-1.html">Our Team</a></li>
+                      <li><a href="./page-2.html">Team Details</a></li>
+                    </ul>
+                  </li>
+                  <li class="menu-item-has-children active">
+                    <a href="#">Services</a>
+                    <ul class="sub-menu">
+                      <li>
+                        <a href="./services.html#educational-services"
+                          >Educational Services</a
+                        >
+                      </li>
+                      <li>
+                        <a href="./services.html#General-services"
+                          >General Services</a
+                        >
+                      </li>
+                      <li>
+                        <a href="./services.html#computer-academy"
+                          >Computer Academy</a
+                        >
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="menu-item-has-children active">
+                    <a href="./projects.html">Projects</a>
                   </li>
                   <li class="menu-item-has-children active">
                     <a href="./index.html#contact">Contact</a>
@@ -95,7 +125,7 @@
               </div>
               <div class="offcanvas_footer">
                 <span
-                  ><a href="mailto:pixydrops@gmail.com"
+                  ><a href="mailto:costa4real77@gmail.com"
                     ><i class="fa fa-envelope-o"></i> costa4real77@gmail.com</a
                   ></span
                 >
@@ -154,29 +184,29 @@
                   <a href="./services.html">Services</a>
                   <ul class="sub-menu">
                     <li>
-                      <a href="./index.html#services">Educational Services</a>
+                      <a href="./services.html">Educational Services</a>
                     </li>
                     <li>
-                      <a href="./index.html#services">General Services</a>
+                      <a href="./services.html">General Services</a>
                     </li>
                     <li>
-                      <a href="./index.html#services">Computer Academy</a>
+                      <a href="./services.html">Computer Academy</a>
                     </li>
                   </ul>
                 </li>
                 <li><a href="./index.html#contact">Contact</a></li>
                 <li>
-                  <a href="./services.html">Pages</a>
+                  <a href="#">Pages</a>
                   <ul class="sub-menu">
                     <li>
-                      <a href="./index.html#services">Our Team</a>
+                      <a href="./page-1.html">Our Team</a>
                     </li>
                     <li>
-                      <a href="./index.html#services">Team Details</a>
+                      <a href="./page-2.html">Team Details</a>
                     </li>
                   </ul>
                 </li>
-                <li><a href="#contact">Projects</a></li>
+                <li><a href="./projects.html">Projects</a></li>
               </ul>
             </div>
             <div class="header-main-info">
@@ -259,24 +289,39 @@
                 We Empower Growth in the Digital Age.
               </h3>
               <p>
-                We deliver real-time professional IT solutions designed to meet
-                your needs. From advanced training at our Computer Academy to
-                seamless Educational, Payment, Examination, and General IT
-                Services. With a focus on excellence and customer satisfaction.
+                <strong>Saintaco Cyberspace Based Resource</strong> is a
+                certified computer academy that deliver real-time professional
+                IT solutions designed to meet your needs. From advanced training
+                at our Computer Academy to seamless Educational, Payment,
+                Examination, and General IT Services. With a focus on excellence
+                and customer satisfaction.
               </p>
               <ul>
                 <li><i class="fal fa-check"></i> Trusted Professionals</li>
                 <li><i class="fal fa-check"></i> Serve the best</li>
               </ul>
-              <a href="https://wa.me/2347065604027" class="main-btn"
-                >Learn More</a
+              <a class="main-btn" id="saintaco-learn">Learn More</a>
+              <a
+                href="https://i.ibb.co/DWgf546/saintaco-cert.jpg"
+                class="main-btn"
               >
+                Certified
+              </a>
             </div>
           </div>
         </div>
       </div>
     </section>
 
+    <div class="whatsapp-popup" id="wa-pop">
+      <div>
+        <h5 id="wa-pop-h5">You'll Be Redirected To Whatsapp!</h5>
+        <button class="wa-pop-btn" id="wa-end-btn">Cancel</button>
+        <button class="wa-pop-btn" id="wa-btn">
+          <a href="https://wa.me/2347065604027">Continue</a>
+        </button>
+      </div>
+    </div>
     <!--====== INFETECH COMPANY ABOUT PART ENDS ======-->
 
     <!--====== SAINTACO FUN FACTS PART ENDS ======-->
@@ -347,9 +392,11 @@
           <div class="col-lg-6">
             <div class="section-title pl-100">
               <p>
-                There are many variations of passages of available but majority
-                have suffered alteration in some form, by humou or randomised
-                words which don't look even slightly believable.
+                With expertise and a commitment to excellence, we're here to
+                guide you every step of the year. <br />
+                Our team is made up of skilled, dedicated and passionate
+                professionals with the knowledge and skills needed for success
+                in the tech world.
               </p>
             </div>
           </div>
@@ -475,57 +522,15 @@
               <h3 class="title">
                 Better IT Solutions & Services at your Fingertips
               </h3>
-              <a class="main-btn" href="https://wa.me/2347065604027"
-                >Learn More</a
-              >
+              <a class="main-btn" id="abt-saintaco-learn">Learn More</a>
             </div>
           </div>
         </div>
       </div>
     </section>
 
+
     <!--====== SAINTACO PROMO BANNER PART ENDS ======-->
-
-    <!--====== SAINTACO SPONSER PART ENDS ======-->
-
-    <div class="infetech-sponser-area infetech-sponser-about-area">
-      <div class="container">
-        <div class="row infetech-sponser-slide">
-          <div class="col-lg-3">
-            <div class="infetech-sponser-item">
-              <img src="assets/images/Samsung.jpg" alt="" />
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="infetech-sponser-item">
-              <img src="assets/images/brand-logo.png" alt="" />
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="infetech-sponser-item">
-              <img src="assets/images/Samsung.jpg" alt="" />
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="infetech-sponser-item">
-              <img src="assets/images/brand-logo.png" alt="" />
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="infetech-sponser-item">
-              <img src="assets/images/Samsung.jpg" alt="" />
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="infetech-sponser-item">
-              <img src="assets/images/brand-logo.png" alt="" />
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!--====== SAINTACO SPONSER PART ENDS ======-->
 
     <!--====== SAINTACO WEB PART ENDS ======-->
 
@@ -540,14 +545,76 @@
           </div>
           <div class="col-lg-3">
             <div class="cta-btn text-right">
-              <a class="main-btn" href="https://wa.me/2347085420536"
-                >Get a Website</a
-              >
+              <button class="main-btn" id="web-btn">Get a Website</button>
             </div>
           </div>
         </div>
       </div>
     </section>
+
+    <!-- website popup starts -->
+    <section class="saintaco-web-popup">
+      <div class="web-container" id="web-container">
+        <button id="web-close">❌</button>
+        <div>
+          <div class="section-title text-center mb-25">
+            <p style="color: #fff; font-weight: 900">Need a Website?</p>
+            <h3 class="title">Get a Website</h3>
+          </div>
+          <button id="form-btn">Send a Mail</button>
+          <button id="form-learnmore">Send a DM</button>
+        </div>
+      </div>
+      <!-- whatsapp popup -->
+      <div class="whatsapp-popup" id="wa-pop">
+        <div>
+          <h5 id="wa-pop-h5">You'll Be Redirected To Whatsapp!</h5>
+          <button class="wa-pop-btn" id="wa-end-btn">Cancel</button>
+          <button class="wa-pop-btn" id="wa-btn">
+            <a href="https://wa.me/2347065604027">Continue</a>
+          </button>
+        </div>
+      </div>
+      <div id="web-form">
+        <button id="form-close" title="close form">❌</button>
+        <form action="https://formspree.io/f/xdkkonvq" method="post">
+          <div class="section-title text-center mb-25">
+            <span>Need a Website?</span>
+            <h3 class="title">Get a Website</h3>
+          </div>
+          <div class="input-box">
+            <input
+              type="text"
+              placeholder="Your Name"
+              name="Fullname"
+              required
+            />
+          </div>
+          <div class="input-box">
+            <input
+              type="email"
+              placeholder="Email Address"
+              name="email"
+              required
+            />
+          </div>
+          <div class="input-box">
+            <textarea
+              name="Message"
+              id="#"
+              cols="30"
+              rows="10"
+              placeholder="Write a Message"
+              required
+            ></textarea>
+          </div>
+          <div class="input-box">
+            <button class="main-btn" type="submit">Send a message</button>
+          </div>
+        </form>
+      </div>
+    </section>
+    <!-- website popup ends -->
 
     <!--====== SAINTACO WEB PART ENDS ======-->
 
