--- a/index.html
+++ b/index.html
@@ -72,17 +72,16 @@
               <div class="offcanvas-social">
                 <ul class="text-center">
                   <li>
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="%24.html"><i class="fab fa-whatsapp"></i></a>
                   </li>
                   <li>
-                    <a href="https://wa.me/2347065604027"
-                      ><i class="fab fa-whatsapp"></i
-                    ></a>
+                    <a href="%24.html"><i class="fab fa-facebook-f"></i></a>
                   </li>
                   <li>
-                    <a href="mailto:costa4real77@gmail.com"
-                      ><i class="far fa-envelope"></i
-                    ></a>
+                    <a href="%24.html"><i class="fab fa-instagram"></i></a>
+                  </li>
+                  <li>
+                    <a href="%24.html"><i class="far fa-envelope"></i></a>
                   </li>
                 </ul>
               </div>
@@ -95,7 +94,34 @@
                     <a href="./about.html">About</a>
                   </li>
                   <li class="menu-item-has-children active">
-                    <a href="./index.html#services">Services</a>
+                    <a href="#">Pages</a>
+                    <ul class="sub-menu">
+                      <li><a href="./page-1.html">Our Team</a></li>
+                      <li><a href="./page-2.html">Team Details</a></li>
+                    </ul>
+                  </li>
+                  <li class="menu-item-has-children active">
+                    <a href="#">Services</a>
+                    <ul class="sub-menu">
+                      <li>
+                        <a href="./services.html#educational-services"
+                          >Educational Services</a
+                        >
+                      </li>
+                      <li>
+                        <a href="./services.html#General-services"
+                          >General Services</a
+                        >
+                      </li>
+                      <li>
+                        <a href="./services.html#computer-academy"
+                          >Computer Academy</a
+                        >
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="menu-item-has-children active">
+                    <a href="./projects.html">Projects</a>
                   </li>
                   <li class="menu-item-has-children active">
                     <a href="./index.html#contact">Contact</a>
@@ -104,7 +130,7 @@
               </div>
               <div class="offcanvas_footer">
                 <span
-                  ><a href="mailto:pixydrops@gmail.com"
+                  ><a href="mailto:costa4real77@gmail.com"
                     ><i class="fa fa-envelope-o"></i> costa4real77@gmail.com</a
                   ></span
                 >
@@ -263,13 +289,14 @@
                     Your Gateway To Digital Excellence. Empowering Education and
                     Innovation, All In One Place.
                   </p>
-                  <a
+                  <button
                     class="main-btn"
+                    id="saintaco-learn"
                     data-animation="fadeInUp"
                     data-delay=".9s"
-                    href="https://wa.me/2347065604027"
-                    >Learn More</a
                   >
+                    Learn More
+                  </button>
                 </div>
               </div>
             </div>
@@ -278,6 +305,15 @@
       </div>
     </section>
     <!-- first section ends -->
+    <div class="whatsapp-popup" id="wa-pop">
+      <div>
+        <h5 id="wa-pop-h5">You'll Be Redirected To Whatsapp!</h5>
+        <button class="wa-pop-btn" id="wa-end-btn">Cancel</button>
+        <button class="wa-pop-btn" id="wa-btn">
+          <a href="https://wa.me/2347065604027">Continue</a>
+        </button>
+      </div>
+    </div>
 
     <!-- second section starts -->
     <section class="infetech-clients-area" id="services">
@@ -659,45 +695,6 @@
     </section>
     <!-- second section ends -->
 
-    <!-- ads here -->
-    <div class="infetech-sponser-area infetech-sponser-area-2">
-      <div class="container">
-        <div class="row infetech-sponser-slide">
-          <div class="col-lg-3">
-            <div class="infetech-sponser-item">
-              <img src="./assets/images/Samsung.jpg" alt="" />
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="infetech-sponser-item">
-              <img src="assets/images/brand-logo.png" alt="" />
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="infetech-sponser-item">
-              <img src="./assets/images/Samsung.jpg" alt="" />
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="infetech-sponser-item">
-              <img src="assets/images/brand-logo.png" alt="" />
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="infetech-sponser-item">
-              <img src="./assets/images/Samsung.jpg" alt="" />
-            </div>
-          </div>
-          <div class="col-lg-3">
-            <div class="infetech-sponser-item">
-              <img src="assets/images/brand-logo.png" alt="" />
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- ads end -->
-
     <!-- contact us -->
     <section class="infetech-home-contact pb-115" id="contact">
       <div class="container">
@@ -781,7 +778,7 @@
         </div>
       </div>
     </section>
-    <!--====== SAINTACO WEB PART ENDS ======-->
+    <!--====== SAINTACO WEB PART STARTS ======-->
 
     <section class="infetech-cta-2-area pt-100 pb-100">
       <div class="container">
@@ -811,14 +808,22 @@
             <h3 class="title">Get a Website</h3>
           </div>
           <button id="form-btn">Send a Mail</button>
-          <button id="form-button">
-            <a href="https://wa.me/2347085420536" >Send a DM</a>
+          <button id="form-learnmore">Send a DM</button>
+        </div>
+      </div>
+      <!-- whatsapp popup -->
+      <div class="whatsapp-popup" id="wa-pop">
+        <div>
+          <h5 id="wa-pop-h5">You'll Be Redirected To Whatsapp!</h5>
+          <button class="wa-pop-btn" id="wa-end-btn">Cancel</button>
+          <button class="wa-pop-btn" id="wa-btn">
+            <a href="https://wa.me/2347065604027">Continue</a>
           </button>
         </div>
       </div>
       <div id="web-form">
         <button id="form-close" title="close form">❌</button>
-        <form action="https://formspree.io/f/xrbgwvpy" method="post">
+        <form action="https://formspree.io/f/xdkkonvq" method="post">
           <div class="section-title text-center mb-25">
             <span>Need a Website?</span>
             <h3 class="title">Get a Website</h3>
