--- a/hjk.html
+++ b/hjk.html
@@ -4,95 +4,89 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>popup</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <style>
-      #popup-form {
-        position: fixed;
-        background-color: aqua;
-        display: none;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        text-align: center;
-        height: 90vh;
+      .whatsapp-popup {
+        height: 100vh;
         width: 100%;
-      }
-      .home-contact-box form {
         display: flex;
         align-items: center;
-        background-color: antiquewhite;
+        justify-content: center;
+        position: fixed;
+        background-color: #602deed5;
+        transition: ease-in-out 0.5s;
+        backdrop-filter: blur(20px);
+        -webkit-backdrop-filter: blur(20px);
+        position: fixed;
+        top: 0;
+        left: 0;
+      }
+      .whatsapp-popup div {
+        border-radius: 10px;
         padding: 50px;
-        border-radius: 10px;
-        gap: 50px;
+        background-color: aliceblue;
+        display: grid;
+        grid-template-columns: repeat(autofit, minmax(1fr, 300px));
+        column-gap: 10px;
+        gap: 20px;
+        transition: ease-in-out 0.5s;
       }
-      button {
-        background-color: antiquewhite;
+      #wa-pop-h5 {
+        grid-column: 1 / 3;
+        text-align: center;
+      }
+      .wa-pop-btn {
+        border: transparent;
+        background-color: #5f2dee;
+        font-weight: 600;
+        font-size: large;
+        color: #fff;
+        border-radius: 10px;
+        transition: ease-in-out 0.5s;
+      }
+      #wa-end-btn {
         padding: 10px;
-        border-radius: 10px;
-        color: #000;
       }
-      .input-box textarea{
-        resize: none;
-        height: 100px;
+      #wa-btn a {
+        border-radius: 10px;
+        padding: 10px;
+        color: #fff;
+        width: 100%;
+        transition: ease-in-out 0.5s;
+      }
+      #wa-end-btn:hover {
+        background-color: red;
+      }
+      #wa-btn a:hover {
+        background-color: lime;
+        height: 100%;
+        width: 100%;
       }
     </style>
   </head>
   <body>
-    <button id="btn">Open ✔️</button>
-    <button id="end-btn">Close ❌</button>
-    <div id="popup-form">
-      <div class="home-contact-box">
-        <form action="https://formspree.io/f/xrbgwvpy" method="post"> 
-          <div class="section-title text-center mb-25">
-            <span>Contact with Us</span>
-            <h3 class="title">Contact Us Now!</h3>
-          </div>
-          <div class="input-box">
-            <input
-              type="text"
-              placeholder="Your Name"
-              name="Fullname"
-              required
-            />
-          </div>
-          <div class="input-box">
-            <input
-              type="email"
-              placeholder="Email Address"
-              name="email"
-              required
-            />
-          </div>
-          <div class="input-box">
-            <textarea
-              name="Message"
-              id="#"
-              cols="30"
-              rows="10"
-              placeholder="Write a Message"
-              required
-            ></textarea>
-          </div>
-          <div class="input-box">
-            <button class="main-btn" type="submit">Send a message</button>
-          </div>
-        </form>
+    <div class="whatsapp-popup" id="wa-pop">
+      <div>
+        <h5 id="wa-pop-h5">You'll Be Redirected To Whatsapp!</h5>
+        <button class="wa-pop-btn" id="wa-end-btn">Cancel</button>
+        <button class="wa-pop-btn" id="wa-btn">
+          <a href="https://wa.me/2347065604027">Continue</a>
+        </button>
       </div>
     </div>
 
     <script>
-      const contactButton =
-      document.getElementById('btn');
-      const contactForm =
-      document.getElementById('popup-form');
-      const closeButton =
-      document.getElementById('end-btn')
+      const learnMore = document.getElementById("saintaco-learn")
+      const whatsappPopup = document.getElementById("wa-pop");
+      const contactButton = document.getElementById("wa-btn");
+      const closeButton = document.getElementById("wa-end-btn");
 
-      contactButton.addEventListener('click', function() {
-        contactForm.style.display = 'flex';
+      learnMore.addEventListener("click", function () {
+        whatsappPopup.style.display = "flex";
       });
 
-      closeButton.addEventListener('click', function() {
-        contactForm.style.display = 'none'
+      closeButton.addEventListener("click", function () {
+        whatsappPopup.style.display = "none";
       });
     </script>
   </body>
